fix: abnormal page width on mobile - final!

--- a/themes/2025/assets/css/main.css
+++ b/themes/2025/assets/css/main.css
@@ -67,8 +67,8 @@ main {
 }
 
 header {
-  max-width: 100%;
   position: sticky;
+  height: 60px;
   top: 0px;
 }
 
