--- a/themes/2025/assets/css/nav.css
+++ b/themes/2025/assets/css/nav.css
@@ -1,28 +1,24 @@
 .main-nav {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  height: 50px;
-  max-width: 100%;
+  justify-content: space-between;
   padding: 2px 30px;
   color: var(--o-blue);
 }
 
 .nav-logo {
   padding: 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
   z-index: 100;
+  width: fit-content;
 }
 
 .nav-logo a,
 .nav-logo img {
-  height: 100%;
+  height: 30px;
+  width: auto;
 }
 
 .nav-list {
-  flex: 2 1 auto;
   display: flex;
   flex-direction: row;
   list-style: none;
